--- a/detail/ID_nonGlobalMain.html
+++ b/detail/ID_nonGlobalMain.html
@@ -7,11 +7,11 @@
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>main 函数只应处于全局作用域中 - C/C++ 安全规则</title>
+  <title>main 函数只应位于全局作用域中 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>main 函数只应处于全局作用域中</h1>
+  <h1>main 函数只应位于全局作用域中</h1>
   <div id="subtitle">
     <div id="subtitle-id">4.3 ID_nonGlobalMain</div>
     <div id="subtitle-tags">
