--- a/detail/ID_obsoleteFunction.html
+++ b/detail/ID_obsoleteFunction.html
@@ -60,6 +60,7 @@ WinExec              //<i> Use ‘CreateProcess’ instead</i></code>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/477.html" target="_blank" class="related-link">CWE-477</a></div>
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/477.html" target="_blank" class="related-link">CWE-477</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/MSC24-C.+Do+not+use+deprecated+or+obsolescent+functions" target="_blank" class="related-link">SEI CERT MSC24-C</a></div>
 </article>
 </html>
