--- a/detail/ID_recursion.html
+++ b/detail/ID_recursion.html
@@ -45,6 +45,9 @@
 </main>
 
 
+<h3>依据</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items">ISO/IEC 14882:2011 5.2.2(9)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
