--- a/detail/ID_selfDivision.html
+++ b/detail/ID_selfDivision.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：除法或求余运算符左右子表达式相同，结果总为 1 或 0 以及产生除零异常，往往是某种笔误。" />
+  <meta name="description" content="C/C++ 安全编程要点：与自身相除的结果总为 1，对自身求余的结果总为 0，往往是某种笔误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>除法或求余运算符左右子表达式相同，结果总为 1 或 0 以及产生除零异常，往往是某种笔误。</p>
+<p>与自身相除的结果总为 1，对自身求余的结果总为 0，往往是某种笔误。</p>
 
 <p>示例：</p>
 <code>int foo(int* p) {
