--- a/detail/ID_spaceStyle.html
+++ b/detail/ID_spaceStyle.html
@@ -48,6 +48,8 @@ if(cond)                //<i> Missing a unified style</i></code>
 <a href="./ID_stickyAssignmentOperator.html" class="related-link">ID_stickyAssignmentOperator</a></div>
 
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/1114.html" target="_blank" class="related-link">CWE-1114</a></div>
 </article>
 </html>
