--- a/detail/ID_unsuitableCapture.html
+++ b/detail/ID_unsuitableCapture.html
@@ -63,6 +63,7 @@ ISO/IEC 14882:2017 8.1.5.2</div>
 <hr class="dashed-hr"/>
 <div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#f52-prefer-capturing-by-reference-in-lambdas-that-will-be-used-locally-including-passed-to-algorithms" target="_blank" class="related-link">C++ Core Guidelines F.52</a>
 <a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#f53-avoid-capturing-by-reference-in-lambdas-that-will-be-used-non-locally-including-returned-stored-on-the-heap-or-passed-to-another-thread" target="_blank" class="related-link">C++ Core Guidelines F.53</a>
-<a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#f54-when-writing-a-lambda-that-captures-this-or-any-class-data-member-dont-use--default-capture" target="_blank" class="related-link">C++ Core Guidelines F.54</a></div>
+<a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#f54-when-writing-a-lambda-that-captures-this-or-any-class-data-member-dont-use--default-capture" target="_blank" class="related-link">C++ Core Guidelines F.54</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/cplusplus/EXP61-CPP.+A+lambda+object+must+not+outlive+any+of+its+reference+captured+objects" target="_blank" class="related-link">SEI CERT EXP61-CPP</a></div>
 </article>
 </html>
