--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <li id="global" class="rules-toc-chapter">Global<ol>
   <li><a href="./detail/ID_nameTooShort.html">全局名称应遵循合理的命名方式</a></li>
   <li><a href="./detail/ID_missingNamespace.html">为代码设定合理的命名空间</a></li>
-  <li><a href="./detail/ID_nonGlobalMain.html">main 函数只应处于全局作用域中</a></li>
+  <li><a href="./detail/ID_nonGlobalMain.html">main 函数只应位于全局作用域中</a></li>
   <li><a href="./detail/ID_usingNamespaceInHeader.html">不应在头文件中使用 using directive</a></li>
   <li><a href="./detail/ID_staticInHeader.html">不应在头文件中使用静态声明</a></li>
   <li><a href="./detail/ID_anonymousNamespaceInHeader.html">不应在头文件中定义匿名命名空间</a></li>
@@ -551,7 +551,7 @@
   <li><a href="./detail/ID_selfDivision.html">除法和求余运算符左右子表达式不应相同</a></li>
   <li><a href="./detail/ID_selfSubtraction.html">减法运算符左右子表达式不应相同</a></li>
   <li><a href="./detail/ID_selfExclusiveOr.html">异或运算符左右子表达式不应相同</a></li>
-  <li><a href="./detail/ID_illSelfCompoundAssignment.html">&amp;=、|=、-=、/=、%= 左右子表达式不应相同</a></li>
+  <li><a href="./detail/ID_illSelfCompoundAssignment.html">&amp;=、|=、^=、-=、/=、%= 左右子表达式不应相同</a></li>
   <li><a href="./detail/ID_selfComparison.html">比较运算符左右子表达式不应相同</a></li>
   <li><a href="./detail/ID_repeatedUnaryOperators.html">不应重复使用一元运算符</a></li>
 </ol></li>
