--- a/detail/ID_badCommentPosition.html
+++ b/detail/ID_badCommentPosition.html
@@ -62,6 +62,8 @@ ISO/IEC 9899:2011 6.4.7(3)-undefined
 ISO/IEC 14882:2003 2.8(2)-undefined
 ISO/IEC 14882:2011 2.9(2)-implementation</div>
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/1113.html" target="_blank" class="related-link">CWE-1113</a></div>
 </article>
 </html>
