--- a/detail/ID_selfAssignment.html
+++ b/detail/ID_selfAssignment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：赋值运算符左右子表达式相同是没有逻辑意义的，往往是笔误或残留代码。" />
+  <meta name="description" content="C/C++ 安全编程要点：左右子表达式相同的赋值表达式不改变对象的值，往往是笔误或残留代码。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,26 +21,22 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>赋值运算符左右子表达式相同是没有逻辑意义的，往往是笔误或残留代码。</p>
+<p>左右子表达式相同的赋值表达式不改变对象的值，往往是笔误或残留代码。</p>
 
 <p>示例：</p>
 <code>a = a;       //<i> Non-compliant</i>
-a = b = a;   //<i> Non-compliant</i>
-</code>
-<p>也可能是对语言特性不了解所致，如：</p>
-<code>class A {
-    int a;
-
-public:
-    A(int a) {
-        a = a;   //<i> Non-compliant, ‘a’ is not the member</i>
-    }
-};</code>
-<p>例中构造函数对成员 a 的赋值是无效的，应改为 this-&gt;a = a;</p>
-
+a = b = a;   //<i> Non-compliant</i></code>
 <p>有时这种代码被用来消除编译警告，编译器可能会报出没有被用到的参数，将参数赋值给自身可去除警告，但这并不是一种好方法，引入了没有实际意义的代码，改进方法可参见 <a href="./ID_paramNotUsed.html" class="dashed-link">ID_paramNotUsed</a>。</p>
 
 <p>有时为了设置调试断点，但又找不到合适的位置，可以增加这种代码作为断点，但这种非正式的代码是不应被保留的。</p>
+
+<p>又如：</p>
+<code>class A {
+    int a;
+public:
+    A(int a) { a = a; }   //<i> Non-compliant, ‘a’ is not the member</i>
+};</code>
+<p>例中构造函数对成员 a 的赋值是无效的，应改为 this-&gt;a = a，或在初始化列中完成赋值。</p>
 
 </main>
 
