--- a/detail/ID_selfComparison.html
+++ b/detail/ID_selfComparison.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：与自身的比较是没意义的，往往是某种笔误。" />
+  <meta name="description" content="C/C++ 安全编程要点：与自身比较的结果恒为真或恒为假，往往是某种笔误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>与自身的比较是没意义的，往往是某种笔误。</p>
+<p>与自身比较的结果恒为真或恒为假，往往是某种笔误。</p>
 
 <p>示例（设 a 为变量或表达式）：</p>
 <code>a == a   //<i> Non-compliant</i>
