--- a/detail/ID_selfExclusiveOr.html
+++ b/detail/ID_selfExclusiveOr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：与自身异或的结果总为 0，而且也可能意味着某种错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：与自身异或的结果总为 0。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,11 +21,10 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>与自身异或的结果总为 0，而且也可能意味着某种错误。</p>
+<p>与自身异或的结果总为 0。</p>
 
 <p>示例：</p>
-<code>a ^= a;      //<i> Non-compliant</i>
-a = a ^ a;   //<i> Non-compliant</i></code>
+<code>a = a ^ a;   //<i> Non-compliant</i></code>
 <p>这种代码可能是为了对变量清零，也可能是笔误，即使没有逻辑错误，也应将变量直接赋值为 0 以提高可读性。</p>
 
 </main>
