--- a/detail/ID_selfSubtraction.html
+++ b/detail/ID_selfSubtraction.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：与自身做减法，结果总为 0，往往是某种笔误。" />
+  <meta name="description" content="C/C++ 安全编程要点：与自身相减的结果总为 0，往往是某种笔误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>与自身做减法，结果总为 0，往往是某种笔误。</p>
+<p>与自身相减的结果总为 0，往往是某种笔误。</p>
 
 <p>示例：</p>
 <code>int *p0, *p1;
