--- a/detail/ID_addressExposure.html
+++ b/detail/ID_addressExposure.html
@@ -13,9 +13,9 @@
 <header>
   <h1>与内存空间布局相关的信息不可被外界感知</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.15 ID_addressExposure</div>
+    <div id="subtitle-id">1.5 ID_addressExposure</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_hardcodedIP.html">next</a> › <a class="nav-link" href="./ID_variableFormatString.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_hardcodedIP.html">next</a> › <a class="nav-link" href="./ID_sensitiveName.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
