--- a/detail/ID_badCommentPosition.html
+++ b/detail/ID_badCommentPosition.html
@@ -13,9 +13,9 @@
 <header>
   <h1>注释应出现在合理的位置</h1>
   <div id="subtitle">
-    <div id="subtitle-id">3.5.3 ID_badCommentPosition</div>
+    <div id="subtitle-id">3.5.2 ID_badCommentPosition</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.comment">Home</a> › <a class="nav-link" href="./ID_sourceFileExt.html">next</a> › <a class="nav-link" href="./ID_nestedComment.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.comment">Home</a> › <a class="nav-link" href="./ID_specialComment.html">next</a> › <a class="nav-link" href="./ID_nestedComment.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
