--- a/detail/ID_complexInlineFunction.html
+++ b/detail/ID_complexInlineFunction.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：是否对函数进行内联优化由实现定义，当函数执行的开销远大于调用的开销时，不会进行内联优化。" />
+  <meta name="description" content="C/C++ 安全编程要点：是否对函数进行内联优化由编译器自行决定，当函数执行的开销远大于调用的开销时，往往不会进行内联优化。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>是否对函数进行内联优化由实现定义，当函数执行的开销远大于调用的开销时，不会进行内联优化。</p>
+<p>是否对函数进行内联优化由编译器自行决定，当函数执行的开销远大于调用的开销时，往往不会进行内联优化。</p>
 
 <p>不适合将函数定义为内联函数的情况：</p>
 <ul>
@@ -51,9 +51,9 @@ excludedFileExts: 不受限制的文件扩展名</div>
 <hr class="dashed-hr"/>
 <div class="ref-items">ISO/IEC 9899:1999 6.7.4(5)-implementation
 ISO/IEC 9899:2011 6.7.4(6)-implementation
-ISO/IEC 14882:2003 7.1.2(2 4)-implementation
-ISO/IEC 14882:2011 7.1.2(2 4)-implementation
-ISO/IEC 14882:2017 10.1.6(2 3)-implementation</div>
+ISO/IEC 14882:2003 7.1.2(2 4)
+ISO/IEC 14882:2011 7.1.2(2 4)
+ISO/IEC 14882:2017 10.1.6(2 3)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
