--- a/detail/ID_hardcodedIP.html
+++ b/detail/ID_hardcodedIP.html
@@ -13,9 +13,9 @@
 <header>
   <h1>与网络地址相关的信息不应写入代码</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.16 ID_hardcodedIP</div>
+    <div id="subtitle-id">1.6 ID_hardcodedIP</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_deprecatedErrno.html">next</a> › <a class="nav-link" href="./ID_addressExposure.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_hijack.html">next</a> › <a class="nav-link" href="./ID_addressExposure.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
