--- a/detail/ID_if_missingEndingElse.html
+++ b/detail/ID_if_missingEndingElse.html
@@ -38,7 +38,7 @@ else if (y &lt; 0){
 else {
     //<i> Comment is the minimum requirement,</i>
     //<i> if here is unreachable logically,</i>
-    //<i> it&#x27;s better to log or throw an exception</i>
+    //<i> it’s better to log or throw an exception</i>
 }</code>
 
 </main>
