--- a/detail/ID_illPtrDiff.html
+++ b/detail/ID_illPtrDiff.html
@@ -54,7 +54,8 @@ ISO/IEC 14882:2011 5.7(6)-undefined</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C 2004 17.2
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/469.html" target="_blank" class="related-link">CWE-469</a>
+MISRA C 2004 17.2
 MISRA C 2012 18.2
 MISRA C++ 2008 5-0-17
 <a href="https://wiki.sei.cmu.edu/confluence/display/c/ARR36-C.+Do+not+subtract+or+compare+two+pointers+that+do+not+refer+to+the+same+array" target="_blank" class="related-link">SEI CERT ARR36-C</a></div>
