--- a/detail/ID_missingArrayIndexing.html
+++ b/detail/ID_missingArrayIndexing.html
@@ -45,7 +45,8 @@ p = &amp;p[1];      //<i> Compliant</i></code>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C 2004 17.4
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/468.html" target="_blank" class="related-link">CWE-468</a>
+MISRA C 2004 17.4
 MISRA C 2012 18.4
 MISRA C++ 2008 5-0-15
 <a href="https://wiki.sei.cmu.edu/confluence/display/c/EXP08-C.+Ensure+pointer+arithmetic+is+used+correctly" target="_blank" class="related-link">SEI CERT EXP08-C</a></div>
