--- a/detail/ID_sensitiveName.html
+++ b/detail/ID_sensitiveName.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">1.4 ID_sensitiveName</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_hijack.html">next</a> › <a class="nav-link" href="./ID_unsafeCleanup.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_addressExposure.html">next</a> › <a class="nav-link" href="./ID_unsafeCleanup.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
