--- a/detail/ID_switch_missingDefault.html
+++ b/detail/ID_switch_missingDefault.html
@@ -35,7 +35,7 @@ case 1:
 default:
     //<i> Comment is the minimum requirement,</i>
     //<i> if here is unreachable logically,</i>
-    //<i> it&#x27;s better to log or throw an exception</i>
+    //<i> it’s better to log or throw an exception</i>
     break;
 }
 </code>
