--- a/detail/ID_unsafeCompileOption.html
+++ b/detail/ID_unsafeCompileOption.html
@@ -13,9 +13,9 @@
 <header>
   <h1>禁用不安全的编译选项</h1>
   <div id="subtitle">
-    <div id="subtitle-id">3.7.4 ID_unsafeCompileOption</div>
+    <div id="subtitle-id">1.22 ID_unsafeCompileOption</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.other">Home</a> › <a class="nav-link" href="./ID_nameTooShort.html">next</a> › <a class="nav-link" href="./ID_badBackslash.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_resourceLeak.html">next</a> › <a class="nav-link" href="./ID_missingHardening.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
