--- a/detail/ID_unsafeStringFunction.html
+++ b/detail/ID_unsafeStringFunction.html
@@ -13,9 +13,9 @@
 <header>
   <h1>禁用不安全的字符串函数</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.11 ID_unsafeStringFunction</div>
+    <div id="subtitle-id">10.6.11 ID_unsafeStringFunction</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_improperNullTermination.html">next</a> › <a class="nav-link" href="./ID_obsoleteFunction.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#expression.call">Home</a> › <a class="nav-link" href="./ID_forbidAtox.html">next</a> › <a class="nav-link" href="./ID_inconsistentArraySize.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
