--- a/detail/ID_variableFormatString.html
+++ b/detail/ID_variableFormatString.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：出于可读性和安全性的考量，格式化字符串最好直接写成常量字符串的形式。" />
+  <meta name="description" content="C/C++ 安全编程要点：出于安全性和可读性的考量，C 格式化字符串最好直接写成常量字符串的形式。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>格式化字符串应为常量 - C/C++ 安全规则</title>
+  <title>C 格式化字符串应为常量 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>格式化字符串应为常量</h1>
+  <h1>C 格式化字符串应为常量</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.14 ID_variableFormatString</div>
+    <div id="subtitle-id">10.6.8 ID_variableFormatString</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_addressExposure.html">next</a> › <a class="nav-link" href="./ID_divideByZero.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#expression.call">Home</a> › <a class="nav-link" href="./ID_forbidCStringFormat.html">next</a> › <a class="nav-link" href="./ID_inconsistentFormatArgType.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>出于可读性和安全性的考量，格式化字符串最好直接写成常量字符串的形式。</p>
+<p>出于安全性和可读性的考量，C 格式化字符串最好直接写成常量字符串的形式。</p>
 
 <p>本规则是 <a href="./ID_hijack.html" class="dashed-link">ID_hijack</a> 的特化。</p>
 
