--- a/detail/ID_badBackslash.html
+++ b/detail/ID_badBackslash.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">3.7.3 ID_badBackslash</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.other">Home</a> › <a class="nav-link" href="./ID_unsafeCompileOption.html">next</a> › <a class="nav-link" href="./ID_forbidDigraphs.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.other">Home</a> › <a class="nav-link" href="./ID_nameTooShort.html">next</a> › <a class="nav-link" href="./ID_forbidDigraphs.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
