--- a/detail/ID_dataRaces.html
+++ b/detail/ID_dataRaces.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">16.1 ID_dataRaces</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#concurrency">Home</a> › <a class="nav-link" href="./ID_TOCTOU.html">next</a> › <a class="nav-link" href="./ID_forbidSignalFunction.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#concurrency">Home</a> › <a class="nav-link" href="./ID_TOCTOU.html">next</a> › <a class="nav-link" href="./ID_nonPOFHandler.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
