--- a/detail/ID_deprecatedErrno.html
+++ b/detail/ID_deprecatedErrno.html
@@ -13,9 +13,9 @@
 <header>
   <h1>选择安全的异常处理方式</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.17 ID_deprecatedErrno</div>
+    <div id="subtitle-id">1.14 ID_deprecatedErrno</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_missingHardening.html">next</a> › <a class="nav-link" href="./ID_hardcodedIP.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_undefinedBehavior.html">next</a> › <a class="nav-link" href="./ID_divideByZero.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
