--- a/detail/ID_divideByZero.html
+++ b/detail/ID_divideByZero.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">1.13 ID_divideByZero</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_variableFormatString.html">next</a> › <a class="nav-link" href="./ID_improperNullTermination.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_deprecatedErrno.html">next</a> › <a class="nav-link" href="./ID_obsoleteFunction.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
