--- a/detail/ID_forbidCStringFormat.html
+++ b/detail/ID_forbidCStringFormat.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">10.6.9 ID_forbidCStringFormat</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#expression.call">Home</a> › <a class="nav-link" href="./ID_forbidAtox.html">next</a> › <a class="nav-link" href="./ID_inconsistentArraySize.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#expression.call">Home</a> › <a class="nav-link" href="./ID_inconsistentArraySize.html">next</a> › <a class="nav-link" href="./ID_variableFormatString.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
