--- a/detail/ID_forbidSignalFunction.html
+++ b/detail/ID_forbidSignalFunction.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">15.4 ID_forbidSignalFunction</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#interruption">Home</a> › <a class="nav-link" href="./ID_dataRaces.html">next</a> › <a class="nav-link" href="./ID_sig_illReturn.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#interruption">Home</a> › <a class="nav-link" href="./ID_nonPOFHandler.html">next</a> › <a class="nav-link" href="./ID_sig_illReturn.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
