--- a/detail/ID_hijack.html
+++ b/detail/ID_hijack.html
@@ -13,9 +13,9 @@
 <header>
   <h1>预判用户输入造成的不良后果</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.5 ID_hijack</div>
+    <div id="subtitle-id">1.7 ID_hijack</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_unlimitedAuthority.html">next</a> › <a class="nav-link" href="./ID_sensitiveName.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_unlimitedAuthority.html">next</a> › <a class="nav-link" href="./ID_hardcodedIP.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
