--- a/detail/ID_improperNullTermination.html
+++ b/detail/ID_improperNullTermination.html
@@ -13,9 +13,9 @@
 <header>
   <h1>确保字符串以空字符结尾</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.12 ID_improperNullTermination</div>
+    <div id="subtitle-id">13.3 ID_improperNullTermination</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_divideByZero.html">next</a> › <a class="nav-link" href="./ID_unsafeStringFunction.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#buffer">Home</a> › <a class="nav-link" href="./ID_nonPODFilling.html">next</a> › <a class="nav-link" href="./ID_insufficientBuffer.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
