--- a/detail/ID_inconsistentArraySize.html
+++ b/detail/ID_inconsistentArraySize.html
@@ -13,9 +13,9 @@
 <header>
   <h1>形参与实参均为数组时，数组大小应一致</h1>
   <div id="subtitle">
-    <div id="subtitle-id">10.6.8 ID_inconsistentArraySize</div>
+    <div id="subtitle-id">10.6.10 ID_inconsistentArraySize</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#expression.call">Home</a> › <a class="nav-link" href="./ID_forbidCStringFormat.html">next</a> › <a class="nav-link" href="./ID_inconsistentFormatArgType.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#expression.call">Home</a> › <a class="nav-link" href="./ID_unsafeStringFunction.html">next</a> › <a class="nav-link" href="./ID_forbidCStringFormat.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
