--- a/detail/ID_insufficientBuffer.html
+++ b/detail/ID_insufficientBuffer.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">13.2 ID_insufficientBuffer</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#buffer">Home</a> › <a class="nav-link" href="./ID_nonPODFilling.html">next</a> › <a class="nav-link" href="./ID_bufferOverflow.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#buffer">Home</a> › <a class="nav-link" href="./ID_improperNullTermination.html">next</a> › <a class="nav-link" href="./ID_bufferOverflow.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
