--- a/detail/ID_missingHardening.html
+++ b/detail/ID_missingHardening.html
@@ -13,9 +13,9 @@
 <header>
   <h1>启用平台和编译器提供的防御机制</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.18 ID_missingHardening</div>
+    <div id="subtitle-id">1.21 ID_missingHardening</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_resourceLeak.html">next</a> › <a class="nav-link" href="./ID_deprecatedErrno.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_unsafeCompileOption.html">next</a> › <a class="nav-link" href="./ID_backDoor.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
