--- a/detail/ID_nonPODFilling.html
+++ b/detail/ID_nonPODFilling.html
@@ -13,9 +13,9 @@
 <header>
   <h1>memset 等函数不应作用于非 POD 对象</h1>
   <div id="subtitle">
-    <div id="subtitle-id">13.3 ID_nonPODFilling</div>
+    <div id="subtitle-id">13.4 ID_nonPODFilling</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#buffer">Home</a> › <a class="nav-link" href="./ID_badLength.html">next</a> › <a class="nav-link" href="./ID_insufficientBuffer.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#buffer">Home</a> › <a class="nav-link" href="./ID_badLength.html">next</a> › <a class="nav-link" href="./ID_improperNullTermination.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
