--- a/detail/ID_obsoleteFunction.html
+++ b/detail/ID_obsoleteFunction.html
@@ -13,9 +13,9 @@
 <header>
   <h1>避免使用已过时的接口</h1>
   <div id="subtitle">
-    <div id="subtitle-id">1.10 ID_obsoleteFunction</div>
+    <div id="subtitle-id">1.12 ID_obsoleteFunction</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_unsafeStringFunction.html">next</a> › <a class="nav-link" href="./ID_dangerousFunction.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#security">Home</a> › <a class="nav-link" href="./ID_divideByZero.html">next</a> › <a class="nav-link" href="./ID_dangerousFunction.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
