--- a/detail/ID_resourceLeak.html
+++ b/detail/ID_resourceLeak.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">2.1 ID_resourceLeak</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#resource">Home</a> › <a class="nav-link" href="./ID_memoryLeak.html">next</a> › <a class="nav-link" href="./ID_missingHardening.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#resource">Home</a> › <a class="nav-link" href="./ID_memoryLeak.html">next</a> › <a class="nav-link" href="./ID_unsafeCompileOption.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
