--- a/detail/ID_sourceFileExt.html
+++ b/detail/ID_sourceFileExt.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">3.6.1 ID_sourceFileExt</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.file">Home</a> › <a class="nav-link" href="./ID_includedFileExt.html">next</a> › <a class="nav-link" href="./ID_badCommentPosition.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.file">Home</a> › <a class="nav-link" href="./ID_includedFileExt.html">next</a> › <a class="nav-link" href="./ID_specialComment.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
