--- a/detail/ID_warningDefault.html
+++ b/detail/ID_warningDefault.html
@@ -15,7 +15,7 @@
   <div id="subtitle">
     <div id="subtitle-id">3.4.10 ID_warningDefault</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.directive">Home</a> › <a class="nav-link" href="./ID_specialComment.html">next</a> › <a class="nav-link" href="./ID_warningDisabled.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg> <a class="nav-link" href="../index.html#precompile.directive">Home</a> › <a class="nav-link" href="./ID_nestedComment.html">next</a> › <a class="nav-link" href="./ID_warningDisabled.html">previous</a>
     </div>
   </div>
   <hr class="dashed-hr"/>
